limited search result to 1000 as per github policy, fixed location overflow

--- a/css/index.css
+++ b/css/index.css
@@ -61,6 +61,11 @@ body {
     border-radius: 10px; 
     padding: 6px 10px;
 }
+.social_links{
+    font-size: 12px;
+    max-width: 90%;
+    overflow-x: hidden;
+}
 
 .repos {
     display: flex;
